# demo

./: README.md  pyproject.toml
.github/workflows/: first-example.yml  generate-ascii.yml
aws_ebs_optimizer/: __init__.py  cli.py  io_utils.py  models.py  optimizer.py  webapp.py
sample_data/: volumes.json
tests/: test_cli.py  test_optimizer.py  test_webapp.py
